# atlas

./: .env.template  .gitignore  .graphifyignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  kimi.plugin.json  test-mcp-tools.mjs
plugins/minutes/: .gitignore  .mcpbignore  AGENTS.md  BUILD-STATUS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  NOTICE  PLAN-tauri-design-pass.md  PLAN-vad-refactor.md  PLAN.dictation-ux.md  PLAN.md  PLAN.md.command-palette  PLAN.md.command-palette-slice-2  README.md  TODOS.md  dev.getminutes.watcher.plist  manifest.json  manifest.mcpb.json  notes-release-plugin-v0.8.0.md  notes.md  release-notes-v0.6.0.md  rust-toolchain.toml
plugins/minutes/.beads/: .gitignore  config.yaml  metadata.json
plugins/minutes/.beads/hooks/: pre-commit  pre-push
plugins/minutes/.cargo/: config.toml
plugins/minutes/.claude-plugin/: marketplace.json
plugins/minutes/.devcontainer/: README.md  devcontainer.json  setup.sh  test-linux.sh
plugins/minutes/.github/: FUNDING.yml
plugins/minutes/.github/workflows/: ci.yml  release-cli.yml  release-macos.yml  release-windows-desktop.yml
plugins/minutes/.opencode/commands/: minutes-cleanup.md  minutes-debrief.md  minutes-graph.md  minutes-ideas.md  minutes-ingest.md  minutes-lint.md  minutes-list.md  minutes-mirror.md  minutes-note.md  minutes-recap.md  minutes-record.md  minutes-search.md  minutes-setup.md  minutes-tag.md  minutes-verify.md  minutes-video-review.md  minutes-weekly.md
plugins/minutes/crates/cli/: Cargo.toml  README.md
plugins/minutes/crates/core/: Cargo.toml  build.rs
plugins/minutes/crates/mcp/: .gitignore  claude-desktop-config.json  package-lock.json  package.json  tsconfig.json  vite.config.mjs
plugins/minutes/crates/reader/: Cargo.toml
plugins/minutes/crates/sdk/: README.md  package-lock.json  package.json  vitest.config.ts
plugins/minutes/crates/whisper-guard/: CHANGELOG.md  Cargo.toml  README.md
plugins/minutes/docs/: AGENT-INTEGRATIONS.md  APPLE_SPEECH.md  AUTO-UPDATE-EVALUATION.md  CALL-CAPTURE-DURABLE-PLAN.md  CALL-CAPTURE-HANDOFF-2026-04-08.md  CALL-CAPTURE-REGRESSION-CHECKLIST.md  CLI-DUAL-SOURCE-CAPTURE-PLAN.md  COMPATIBILITY-CHECKLIST.md  CONFIG.md  CONTEXT-STORE.md  CORE-AUDIO-PROCESS-TAP.md  COWORK-RESEARCH.md  CRISTY-BLANK-TRANSCRIPT-INVESTIGATION.md  DEBUG-DICTATION-HOTKEY.md  DESKTOP-CONTEXT-RUNTIME-CHECKLIST.md  DESKTOP-DEVELOPMENT.md  HOTKEY-BEHAVIOR.md  MULTI-SOURCE-CAPTURE.md  PARAKEET.md  PI_AGENT.md  PLAN-bundle-cli-in-app.md  PRE-COMMIT.md  PRE-RELEASE-CHECKLIST.md  RELEASE-CHANNELS.md  RELEASE-MACOS.md  RELEASE-NOTES.md  RELEASE-WINDOWS.md  RELEASE.md  SKILL-TEMPLATE-INTERACTIVE.md  UPDATER-DEV-TESTING.md  audio-devices.md  frontmatter-schema.md
plugins/minutes/docs/demo/: package-lock.json  package.json
plugins/minutes/docs/demo-video/: package-lock.json  package.json  remotion.config.ts  tsconfig.json
plugins/minutes/docs/designs/: apple-native-backend-candidates-2026-04-13.md  apple-native-backend-spike-results-2026-04-13.md  apple-native-transcription-coordinator-spike.md  apple-speech-benchmark-2026-04-22.md  cross-device-ghost-context.md  dictation-benchmark-2026-05-01.md  interactive-skills-ecosystem.md  llm-title-refinement-2026-04-14.md  parakeet-boost-tuning-2026-04-14.md  parakeet-helper-contract.md  parakeet-perf-2026-04-14.md  parakeet-warm-server-sidecar-2026-04-14.md  proper-name-eval-gate-2026-04-15.md
plugins/minutes/docs/diagrams/: minutes-architecture.html
plugins/minutes/docs/eval/: results-v0.1-graded.md  results-v0.1.md
plugins/minutes/docs/plans/: agent-event-bus-v0-closure-review-2026-04-29.md  dictation-platform-contracts-2026-05-01.md  macos-permission-center-2026-05-01.md  mcp-live-events-host-compat-2026-04-29.md  minutes-7oha-nudge-prompt.md  minutes-tjg3-nudge-prompt.md  minutes-tjg3-transcription-coordinator.md
plugins/minutes/docs/rfcs/: 0001-templates.md  0002-parakeet-live-streaming.md  0003-agent-event-bus-v0.md
plugins/minutes/examples/: README.md
plugins/minutes/examples/graphiti/: README.md  adapter.py  requirements.txt
plugins/minutes/examples/mem0/: README.md  adapter.py  requirements.txt
plugins/minutes/integrations/claude-cowork-extension/: README.md  manifest.json  package.json
plugins/minutes/schema/: meeting.schema.json
plugins/minutes/scripts/: apply_skill_pack.mjs  build.sh  build_cowork_extension.sh  calendar-events.swift  calendar-helper-Info.plist  check-agents-sync.sh  check_activation_loop.sh  check_ambient_memory.sh  check_cowork_extension.sh  check_dojo.sh  check_mcpb_bundle.py  check_mcpb_bundle.sh  check_recall_workspace.sh  check_team_compounding.sh  codex_epic_runner.mjs  create-branded-dmg.sh  diagnose-desktop-hotkey.sh  generate-app-icon.py  generate-dmg-background.py  generate-tray-icons.py  generate_cues_elevenlabs.mjs  generate_llms_txt.mjs  generate_skill_metadata.mjs  install-dev-app.sh  install_cues.mjs  pack_mcpb.sh  recommend_skill_packs.mjs  reinstall.sh  release_notes.sh  run_dictation_benchmark.sh  run_minutes_7oha_nudge.sh  run_minutes_tjg3_nudge.sh  run_proper_name_eval.sh  smoke_mcpb_handshake.py  smoke_mcpb_handshake.sh  sync_site_release_version.mjs  validate_skill_pack.mjs
plugins/minutes/scripts/test/: codex_epic_runner.test.mjs
plugins/minutes/site/: .gitignore  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
plugins/minutes/site/app/: globals.css  layout.tsx  page.tsx
plugins/minutes/site/components/: compare-page.tsx  conversation-topology.tsx  copy-button.tsx  demo-player.tsx  minutes-demo.tsx  public-footer.tsx  topology-loader.tsx
plugins/minutes/site/lib/: downloads.ts  product-surfaces.json  release.ts  skills-catalog.json
plugins/minutes/site/public/: compare.md  llms-full.txt  llms.txt  privacy.html
plugins/minutes/site/remotion/: Root.tsx
plugins/minutes/tauri/src/: dictation-overlay.html  (+4 more)
plugins/minutes/tauri/src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  minutes-cli.entitlements  tauri.conf.json  tauri.dev.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
(+2639 files in other folders)
