[workspace]
members = ["crates/core", "crates/cli", "crates/reader", "crates/whisper-guard", "tauri/src-tauri"]
resolver = "2"

[workspace.package]
version = "0.18.5"
edition = "2021"
license = "MIT"
authors = ["Mat Silverstein"]
description = "Conversation memory for AI assistants"
repository = "https://github.com/silverstein/minutes"
homepage = "https://useminutes.app"

[profile.release]
strip = true
lto = "thin"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Audio
cpal = { git = "https://github.com/RustAudio/cpal.git", rev = "33e05ec94b5670c6f02080acf3fd6d8ac21e37cd", default-features = false, features = ["pipewire", "realtime"] }
hound = "3.5"

# Transcription
# `tracing_backend` routes whisper.cpp + ggml C-level logs through the Rust
# tracing subscriber so we can filter them like any other event. Without this,
# the C `whisper_vad_detect_speech` line floods the user's terminal during a
# recording (issue #163). Pair with `whisper_rs::install_logging_hooks()` at
# process startup.
whisper-rs = { version = "0.16", features = ["tracing_backend"] }

# File watching
notify = "7"

# CLI
clap = { version = "4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Filesystem
dirs = "6"
walkdir = "2"
which = "4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Signal handling
ctrlc = "3"

# HTTP client (for LLM API calls — no secrets in process args)
ureq = { version = "3", features = ["json"] }

# File locking (atomic PID file operations)
fs2 = "0.4"

# JSON Schema generation
schemars = { version = "1", features = ["derive", "chrono04"] }

# Audio format conversion
symphonia = { version = "0.5", features = ["mp3", "aac", "ogg", "wav", "isomp4"] }

# Noise reduction (pure Rust RNNoise port)
nnnoiseless = "0.5"

# Channels (for streaming audio)
crossbeam-channel = "0.5"

# Speaker diarization (native, no Python) — patched fork fixes i16→f32
# normalization bug and trailing speech flush in get_segments
pyannote-rs = { git = "https://github.com/gregoire22enpc/pyannote-rs", rev = "ae9fbc1" }

# ONNX Runtime + ndarray (used directly for segmentation model — pyannote-rs
# has a normalisation bug so we bypass get_segments for the segmentation step)
ort = { version = "2.0.0-rc.10", features = ["ndarray"] }
ndarray = "0.16"

# SQLite (relationship graph index)
rusqlite = { version = "0.33", features = ["bundled"] }
