[package]
name = "minutes-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI for minutes — record, transcribe, and search conversation memory"
keywords = ["meeting", "transcription", "whisper", "ai", "memory"]
categories = ["multimedia::audio", "command-line-utilities"]
readme = "README.md"

[[bin]]
name = "minutes"
path = "src/main.rs"

[features]
default = ["whisper", "diarize"]
whisper = ["minutes-core/whisper"]
diarize = ["minutes-core/diarize", "dep:pyannote-rs", "dep:ort", "dep:symphonia"]
parakeet = ["minutes-core/parakeet"]
# Streaming Silero VAD via ort. Pulls minutes-core's vad-ort. Also
# wires the setup-time download for silero-vad-v6.2.0.onnx.
vad-ort = ["minutes-core/vad-ort", "dep:ort"]
coreml = ["minutes-core/coreml"]
cuda = ["minutes-core/cuda"]
hipblas = ["minutes-core/hipblas"]
metal = ["minutes-core/metal"]
vulkan = ["minutes-core/vulkan"]

[dependencies]
minutes-core = { path = "../core", version = "0.18.5", default-features = false, features = ["streaming"] }
clap = { workspace = true }
ctrlc = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
hound = { workspace = true }
dirs = { workspace = true }
schemars = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
ureq = { workspace = true }
csv = "1"
walkdir = { workspace = true }
pyannote-rs = { workspace = true, optional = true }
# Pin ort to rc.10 — rc.12 switched to ndarray 0.17 which conflicts with pyannote-rs's ndarray 0.16.
# This constraint is respected even by `cargo install minutes-cli` from crates.io.
# Remove once pyannote-rs ships a fix (tracked: thewh1teagle/pyannote-rs#27).
ort = { version = "=2.0.0-rc.10", optional = true }
symphonia = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
