[package]
name = "minutes-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core library for minutes — audio capture, transcription, and meeting memory"
keywords = ["meeting", "transcription", "whisper", "ai", "memory"]
categories = ["multimedia::audio", "command-line-utilities"]

[features]
default = ["whisper"]
whisper = ["dep:whisper-rs", "whisper-guard/whisper"]
parakeet = []  # subprocess-based, uses tempfile for concurrent safety
diarize = ["dep:pyannote-rs", "dep:ort", "dep:ndarray"]
coreml = ["whisper-rs/coreml"]
cuda = ["whisper-rs/cuda"]
hipblas = ["whisper-rs/hipblas"]
metal = ["whisper-rs/metal"]
vulkan = ["whisper-rs/vulkan"]
streaming = ["dep:crossbeam-channel"]
denoise = ["dep:nnnoiseless"]
# Streaming Silero VAD via ort. Implies streaming because every consumer
# (recording sidecar) needs streaming audio. ort + ndarray are already
# pulled in by `diarize`; cargo unifies them when both features are on.
vad-ort = ["streaming", "dep:ort", "dep:ndarray"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }
tracing = { workspace = true }
cpal = { workspace = true }
hound = { workspace = true }
notify = { workspace = true }
whisper-rs = { workspace = true, optional = true }
symphonia = { workspace = true }
ureq = { workspace = true }
fs2 = { workspace = true }
schemars = { workspace = true }
crossbeam-channel = { workspace = true, optional = true }
pyannote-rs = { workspace = true, optional = true }
ort = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }
whisper-guard = { path = "../whisper-guard", version = "0.3.0" }
nnnoiseless = { workspace = true, optional = true }
base64 = "0.22"
rusqlite = { workspace = true }
tempfile = "3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
cidre = { version = "0.15.0", default-features = false, features = ["at", "av", "cat", "cf", "cm", "core_audio", "macos_14_4", "ns"] }
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSRunningApplication", "NSWorkspace", "libc"] }
objc2-av-foundation = { version = "0.3.2", default-features = false, features = ["AVCaptureDevice", "AVMediaFormat"] }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "5.14.0"

# Native hotkey (CGEventTap) uses raw FFI — no extra crate deps needed.
# The macOS frameworks are linked automatically via #[link(name = "...")]

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
hound = { workspace = true }
dirs = { workspace = true }
insta = { version = "1", features = ["json"] }

[[test]]
name = "integration"
path = "../../tests/integration/pipeline_test.rs"
