[package]
name = "minutes-reader"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Lightweight read-only library for parsing Minutes meeting files"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }
schemars = { workspace = true }

[dev-dependencies]
tempfile = "3"
